// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`快照测试 CardMedia设置square属性 1`] = `
<div
  className="sc-AxjAm dnslaE sinoui-card__media sinoui-card__media--square"
/>
`;

exports[`快照测试 CardMedia设置wide属性 1`] = `
<div
  className="sc-AxjAm ffutXX sinoui-card__media sinoui-card__media--16-9"
/>
`;
